Fix card alignment

--- a/app/components/AlbumList/styles.scss
+++ b/app/components/AlbumList/styles.scss
@@ -1,7 +1,6 @@
 .album_list_container {
   display: flex;
   width: 100%;
-  height: 100%;
 }
 
 .album_list_cards {
@@ -9,5 +8,5 @@
   width: 100%;
   height: 100%;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: flex-start;
 }
